--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="current-operand"></div>
         </div>
 <button class="clear-btn span-two">AC</button>
-<button class="del-btn">Del</button>
+<button class="del-btn">D</button>
 <button class="operator-btn">/</button>
 <button class="number-btn">1</button>
 <button class="number-btn">2</button>
